# AGORA-MVP

./: .env.example  .gitignore  CONTEXT.md  PRIVACY_POLICY.md  README.md  deep_research_extracted.md  package-lock.json  render.yaml  vercel.json
.agent/session/: current.md  decisions.md  issues.md  research_results.md  scan_results.md  sprint.md
.github/workflows/: ci.yml
_archive/: Cargo.toml
_archive/agora-trust-layer/: README.md  architecture.md  go-to-market.md  one-pager.md  patent-strategy.md
_archive/business/: company-structure.md  financial-model.md  gtm-strategy.md  legal-structure.md  pitch-deck.md  prd.md
_archive/circuits/trust_proof/: package.json  trust_main.circom
_archive/dead_packages/api/: .env.example  Cargo.toml  MAP.md  README.md
_archive/dead_packages/sdk-python/: pyproject.toml
_archive/dead_packages/sdk-typescript/: package.json
_archive/deploy/docker/: Dockerfile
_archive/deploy/monitoring/: prometheus.yml
_archive/docs/: COFOUNDER_MEMO.md  CUSTOM_GPT_CONFIG.md  GAMMA_PROMPT_V5_REVOLUT_STYLE.md  GAMMA_THEME.md  PITCH_DECK_v4.md  README.md  SPRINT_PLAN.md  chatgpt_actions_openapi.json  gamma_pitch_prompt.md
_archive/pitch_decks/: Agora_SuffolkUniversity_v2.pptx  Agora_SuffolkUniversity_v3.pptx
_archive/protocol/: 01-overview.md  02-trust-layer.md  03-payment-layer.md  04-policy-engine.md  05-discovery.md  06-identity.md  07-security.md  README.md  economic-model.md  patent-claims.md  prior-art.md  sdk-design.md  use-cases.md  whitepaper.md
_archive/reference_decks/: AGORA DEEP research.docx  AGORA DEEP research.txt
_archive/tests/load/: README.md
agora-trust-layer/: pitch-deck.md
circuits/trust_proof/: README.md  circom.json
deploy/docker/: docker-compose.monitoring.yml  docker-compose.yml
deploy/kubernetes/: api.yaml
docs/: 00_INDEX.md  01_OVERVIEW.md  02_TRUST_AND_CONNECTIONS.md  03_FUNNEL_AND_CONVERSION.md  04_BUSINESS_MODEL.md  05_MARKET_AND_COMPETITION.md  06_EVOLUTION_ROADMAP.md  07_RISK_ANALYSIS.md  08_FINANCIAL_PROJECTIONS.md  09_PHILOSOPHY.md  10_MARKETING_STRATEGY.md  AI_FIRST_OPS.md  CHATGPT_SYSTEM_PROMPT.md  CJM_PHASE1.md  CUSTOM_GPT_CONFIG.md  GAMMA_PROMPT_V6_FINAL.md  GAMMA_ULTRA_COMPRESSED.md  NOTEBOOKLM_PROMPT.md  PROJECT_CONTEXT.md  STRATEGIC_ROADMAP_5YEAR.md  agora_trust_engine_formulas.tex  chatgpt_actions_openapi.json  gamma_pitch_prompt.md
docs/api/: agora-api.postman_collection.json
docs/archive/: PRODUCT_SYSTEM_DESIGN.md  PROGRESS.md  PROJECT_CONTEXT.md  QUICK_START.md  ROADMAP.md
docs/business/: 01_BUSINESS_MODEL.md  02_RISK_ANALYSIS.md  03_VALUE_PROPOSITION_CANVAS.md  04_FINANCIAL_PROJECTIONS.md  05_GO_TO_MARKET_STRATEGY.md  BRIDGES_SPEC.md  COFOUNDER_DECK_PROMPT.md  COFOUNDER_MEMO.md  SPRINT_PLAN.md
docs/developer/: DISCOVERY_PROTOCOL.md  TRUST_SCORE_EXPLAINED.md  VALIDATION_PROTOCOL.md
docs/mvp/: COMPETITION_PLAYBOOK.md  COMPETITOR_ANALYSIS_40K.md  GAMMA_THEME.md  IMPLEMENTATION_PLAN_PHASE3.md  KANO_FEATURE_MODEL.md  MARKETPLACE_SPEC.md  MVP_CONCEPT.md  OPEN_WINDOW_64_V2.md  PITCH_DECK.md  PITCH_DECK_v6.md  SLIDE_CONTENT_v4.md  TARGET_AUDIENCE.md  TECHNICAL_STACK.md
docs/pitch/: COFOUNDER_MEMO.md
docs/poster/: svg-to-pdf.js  svg-to-png.js
docs/prd/: 04-sdk-python.md  05-marketplace.md  07-ap2.md  README.md
docs/research/: 00_INDEX.md  01_MARKET_SIZING.md  02_COMPETITORS.md  03_EU_AI_ACT.md  04_INFRASTRUCTURE_THESIS.md  05_PITCH_MASTERY.md  DEEP_RESEARCH_VERIFIABLE_AI.md  RESEARCH_FOUNDATION.md
(+22 files in other folders)
