[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Agora Team"]
repository = "https://github.com/agora-network/agora"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Testing
proptest = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
