[package]
name = "agora-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server for Agora Trust Protocol"

[dependencies]
# Core library
agora-core = { path = "../core" }

# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Database
sqlx.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Redis cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web = "0.7"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Metrics
prometheus = "0.13"
once_cell = "1.19"

# Validation
validator.workspace = true

# Rate limiting
governor = "0.6"

# Crypto and utils
hex = "0.4"
sha2 = "0.10"
lazy_static = "1.4"
futures = "0.3"

[dev-dependencies]
actix-http = "3.4"
reqwest = { version = "0.11", features = ["json"] }
