[project]
name = "agora-sdk"
version = "0.1.0"
description = "Python SDK for Agora Trust Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Agora Protocol" }]
keywords = ["agora", "trust", "ai-agents", "zkp", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agora_sdk"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
line-length = 100
target-version = "py39"
